# Market_Research_Agent

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
reports/: .gitkeep  report.md
src/market_agent/: crew.py  main.py
