[project]
name = "market_agent"
version = "0.1.0"
description = "Market_Agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.9.3",
]

[project.scripts]
market_agent = "market_agent.main:run"
run_crew = "market_agent.main:run"
train = "market_agent.main:train"
replay = "market_agent.main:replay"
test = "market_agent.main:test"
run_with_trigger = "market_agent.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
